--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,18 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install pip-tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install pip-tools
+
+    - name: Pip Compile
+        run: |
+          rm -f requirements.txt
+          pip-compile requirements.in -o requirements.txt
+          pip install -r requirements.txt
+
+
     #- name: Download package
     #  uses: actions/download-artifact@v3
     #  with:
@@ -39,9 +51,6 @@ jobs:
 
     #- name: install package
     #  run: pip install ${{ needs.build.outputs.whl_filename }}
-
-    - name: Install test deps
-      run: pip install -r requirements.in
 
     - name: Run tests
       run: pytest -v
