--- a/setup.cfg
+++ b/setup.cfg
@@ -7,15 +7,15 @@ description-file = README.md
 [tool:pytest]
 exclude = .tox,.git,docs,.ropeproject
 python_classes =
-addopts = --black --isort --cov=converter --cov-report=term-missing --mypy
+addopts = --cov=converter --cov-report=term-missing --mypy
 
 [flake8]
 exclude = .tox,.git,docs,.ropeproject,.hypothesis
 max-line-length = 150
 ignore = E501,E402
 
-[isort]
-profile = black
+#[isort]
+#profile = black
 
 [coverage:run]
 branch = true
