--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,16 +9,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  #build:
-  #  uses: ./.github/workflows/build.yml
-  #  secrets: inherit
-  #  with:
-  #    oed_spec_branch: ${{ inputs.oed_spec_branch }}
+  build:
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
 
   test:
     name: Run Pytest
     runs-on: ubuntu-latest
-    #needs: build
+    needs: build
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
@@ -42,17 +40,16 @@ jobs:
         pip-compile requirements.in -o requirements.txt --resolver=backtracking
         pip install -r requirements.txt
 
+    - name: Download package
+      uses: actions/download-artifact@v3
+      with:
+        name: bin_package
+        path: ${{ github.workspace }}/
 
-    #- name: Download package
-    #  uses: actions/download-artifact@v3
-    #  with:
-    #    name: bin_package
-    #    path: ${{ github.workspace }}/
-
-    #- name: install package
-    #  run: pip install ${{ needs.build.outputs.whl_filename }}
+    - name: install package
+      run: pip install ${{ needs.build.outputs.whl_filename }}
 
     - name: Run tests
       run: |
         docker-compose up -d
-        pytest -v
+        pytest
