--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        python-version: ["3.11"]
-        #python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -37,9 +36,9 @@ jobs:
 
     - name: Pip Compile
       run: |
-        #rm -f requirements.txt requirements-package.txt
-        #pip-compile requirements-package.in -o requirements-package.txt --resolver=backtracking
-        #pip-compile requirements.in -o requirements.txt --resolver=backtracking
+        rm -f requirements.txt
+        pip-compile requirements-package.in -o requirements-package.txt --resolver=backtracking
+        pip-compile requirements.in -o requirements.txt --resolver=backtracking
         pip install -r requirements.txt
 
     - name: Download package
