--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Pip Compile
       run: |
-        rm -f requirements.txt
+        rm -f requirements.txt requirements-package.txt
         pip-compile requirements-package.in -o requirements-package.txt --resolver=backtracking
         pip-compile requirements.in -o requirements.txt --resolver=backtracking
         pip install -r requirements.txt
