--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,19 +9,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  #build:
-  #  uses: ./.github/workflows/build.yml
-  #  secrets: inherit
-  #  with:
-  #    oed_spec_branch: ${{ inputs.oed_spec_branch }}
+  build:
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
 
   test:
     name: Run Pytest
     runs-on: ubuntu-latest
-    #needs: build
+    needs: build
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -31,17 +29,28 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    #- name: Download package
-    #  uses: actions/download-artifact@v3
-    #  with:
-    #    name: bin_package
-    #    path: ${{ github.workspace }}/
+    - name: Install pip-tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install pip-tools
 
-    #- name: install package
-    #  run: pip install ${{ needs.build.outputs.whl_filename }}
+    - name: Pip Compile
+      run: |
+        rm -f requirements.txt requirements-package.txt
+        pip-compile requirements-package.in -o requirements-package.txt --resolver=backtracking
+        pip-compile requirements.in -o requirements.txt --resolver=backtracking
+        pip install -r requirements.txt
 
-    - name: Install test deps
-      run: pip install -r tests/requirements.in
+    - name: Download package
+      uses: actions/download-artifact@v3
+      with:
+        name: bin_package
+        path: ${{ github.workspace }}/
+
+    - name: install package
+      run: pip install ${{ needs.build.outputs.whl_filename }}
 
     - name: Run tests
-      run: pytest -v
+      run: |
+        docker-compose up -d
+        pytest
