--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,4 @@
--r ./requirements-package.in
--r ./optional-package.in
-
+converter
 pytest
 pytest-cov
 flake8
@@ -16,3 +14,5 @@ respx
 geodatasets
 ipdb
 h5py
+-r requirements-package.in
+-r optional-package.in
