--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -116,13 +116,13 @@ jobs:
     - name: Download Source package
       uses: actions/download-artifact@v3
       with:
-        name: src_package
+        name: odm_src_package
         path: ${{ github.workspace }}/
 
     - name: Download Linux package
       uses: actions/download-artifact@v3
       with:
-        name: bin_package
+        name: odm_bin_package
         path: ${{ github.workspace }}/
 
     # --- Create Release --- #
