--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,8 @@ jobs:
 
     - name: Pip Compile
       run: |
-        # rm -f requirements.txt
-        # pip-compile requirements-package.in -o requirements-package.txt --resolver=backtracking
+        rm -f requirements.txt
+        pip-compile requirements-package.in -o requirements-package.txt --resolver=backtracking
         # pip-compile requirements.in -o requirements.txt
         pip install -r requirements.txt
 
