--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile requirements.in
 #
-adlfs==2023.12.0
+adlfs==2024.4.1
     # via -r optional-package.in
-aiobotocore==2.11.1
+aiobotocore==2.12.3
     # via s3fs
-aiohttp==3.9.3
+aiohttp==3.9.5
     # via
     #   adlfs
     #   aiobotocore
@@ -19,7 +19,7 @@ aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.6.0
     # via pydantic
-anyio==4.2.0
+anyio==4.3.0
     # via
     #   httpx
     #   starlette
@@ -31,31 +31,31 @@ attrs==23.2.0
     #   fiona
     #   hypothesis
     #   pytest-mypy
-azure-core==1.30.0
+azure-core==1.30.1
     # via
     #   adlfs
     #   azure-identity
     #   azure-storage-blob
 azure-datalake-store==0.0.53
     # via adlfs
-azure-identity==1.15.0
+azure-identity==1.16.0
     # via adlfs
-azure-storage-blob==12.19.0
+azure-storage-blob==12.19.1
     # via adlfs
-boto3==1.34.27
+boto3==1.34.69
     # via -r optional-package.in
-boto3-stubs==1.34.33
+boto3-stubs==1.34.94
     # via types-boto3
-botocore==1.34.27
+botocore==1.34.69
     # via
     #   aiobotocore
     #   boto3
     #   s3transfer
-botocore-stubs==1.34.33
+botocore-stubs==1.34.94
     # via
     #   boto3-stubs
     #   types-botocore
-certifi==2023.11.17
+certifi==2024.2.2
     # via
     #   fiona
     #   httpcore
@@ -85,13 +85,13 @@ cloudpickle==3.0.0
     # via
     #   dask
     #   distributed
-coverage[toml]==7.4.1
-    # via
-    #   coverage
-    #   pytest-cov
-cramjam==2.8.1
+converter==1.0.0
+    # via -r requirements.in
+coverage[toml]==7.5.0
+    # via pytest-cov
+cramjam==2.8.3
     # via fastparquet
-cryptography==42.0.2
+cryptography==42.0.5
     # via
     #   azure-identity
     #   azure-storage-blob
@@ -105,7 +105,7 @@ dask[array,dataframe]==2024.1.1
     #   distributed
 dask-geopandas==0.3.1
     # via -r optional-package.in
-dask-sql==2024.1.0
+dask-sql==2024.3.0
     # via -r optional-package.in
 decorator==5.1.1
     # via
@@ -114,18 +114,17 @@ decorator==5.1.1
 distributed==2024.1.1
     # via
     #   -r optional-package.in
-    #   -r requirements-package.in
     #   dask-geopandas
     #   dask-sql
 executing==2.0.1
     # via stack-data
-fastapi==0.109.0
+fastapi==0.110.3
     # via dask-sql
-fastparquet==2023.10.1
+fastparquet==2024.2.0
     # via -r requirements-package.in
-filelock==3.13.1
+filelock==3.14.0
     # via pytest-mypy
-fiona==1.9.5
+fiona==1.9.6
     # via geopandas
 flake8==7.0.0
     # via -r requirements.in
@@ -133,7 +132,7 @@ frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2023.12.2
+fsspec==2024.3.1
     # via
     #   -r requirements-package.in
     #   adlfs
@@ -142,7 +141,7 @@ fsspec==2023.12.2
     #   s3fs
 geodatasets==2023.12.0
     # via -r requirements.in
-geopandas==0.14.3
+geopandas==0.14.4
     # via
     #   -r optional-package.in
     #   dask-geopandas
@@ -150,30 +149,30 @@ h11==0.14.0
     # via
     #   httpcore
     #   uvicorn
-h5py==3.10.0
+h5py==3.11.0
     # via -r requirements.in
-httpcore==1.0.2
+httpcore==1.0.5
     # via httpx
-httpx==0.26.0
+httpx==0.27.0
     # via
     #   -r requirements.in
     #   dask-sql
     #   respx
-hypothesis==6.97.4
+hypothesis==6.100.2
     # via -r requirements.in
-idna==3.6
+idna==3.7
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==7.0.1
+importlib-metadata==7.1.0
     # via dask
 iniconfig==2.0.0
     # via pytest
 ipdb==0.13.13
     # via -r requirements.in
-ipython==8.21.0
+ipython==8.24.0
     # via ipdb
 isodate==0.6.1
     # via azure-storage-blob
@@ -191,39 +190,40 @@ locket==1.0.0
     # via
     #   distributed
     #   partd
-markupsafe==2.1.4
+markupsafe==2.1.5
     # via jinja2
-matplotlib-inline==0.1.6
+matplotlib-inline==0.1.7
     # via ipython
 mccabe==0.7.0
     # via flake8
-msal==1.26.0
+msal==1.28.0
     # via
     #   azure-datalake-store
     #   azure-identity
     #   msal-extensions
 msal-extensions==1.1.0
     # via azure-identity
-msgpack==1.0.7
+msgpack==1.0.8
     # via distributed
 multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-mypy==1.8.0
+mypy==1.10.0
     # via pytest-mypy
 mypy-extensions==1.0.0
     # via mypy
-numpy==1.26.3
+numpy==1.26.4
     # via
     #   dask
     #   fastparquet
+    #   geopandas
     #   h5py
     #   pandas
     #   pandas-stubs
     #   pyogrio
     #   shapely
-packaging==23.2
+packaging==24.0
     # via
     #   dask
     #   dask-geopandas
@@ -234,26 +234,26 @@ packaging==23.2
     #   pooch
     #   pyogrio
     #   pytest
-pandas==2.2.0
+pandas==2.2.2
     # via
     #   -r requirements-package.in
     #   dask
     #   dask-sql
     #   fastparquet
     #   geopandas
-pandas-stubs==2.1.4.231227
+pandas-stubs==2.2.1.240316
     # via -r requirements.in
-parso==0.8.3
+parso==0.8.4
     # via jedi
 partd==1.4.1
     # via dask
 pexpect==4.9.0
     # via ipython
-platformdirs==4.2.0
+platformdirs==4.2.1
     # via pooch
-pluggy==1.4.0
+pluggy==1.5.0
     # via pytest
-pooch==1.8.0
+pooch==1.8.1
     # via geodatasets
 portalocker==2.8.2
     # via msal-extensions
@@ -269,11 +269,11 @@ pure-eval==0.2.2
     # via stack-data
 pycodestyle==2.11.1
     # via flake8
-pycparser==2.21
+pycparser==2.22
     # via cffi
-pydantic==2.6.0
+pydantic==2.7.1
     # via fastapi
-pydantic-core==2.16.1
+pydantic-core==2.18.2
     # via pydantic
 pyflakes==3.2.0
     # via flake8
@@ -289,23 +289,23 @@ pyogrio==0.7.2
     # via -r optional-package.in
 pyproj==3.6.1
     # via geopandas
-pytest==8.0.0
+pytest==8.2.0
     # via
     #   -r requirements.in
     #   pytest-cov
     #   pytest-isort
     #   pytest-mypy
-pytest-cov==4.1.0
+pytest-cov==5.0.0
     # via -r requirements.in
-pytest-isort==3.1.0
+pytest-isort==4.0.0
     # via -r requirements.in
 pytest-mypy==0.10.3
     # via -r requirements.in
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   pandas
-pytz==2023.4
+pytz==2024.1
     # via pandas
 pyyaml==6.0.1
     # via
@@ -317,17 +317,13 @@ requests==2.31.0
     #   azure-datalake-store
     #   msal
     #   pooch
-respx==0.20.2
+respx==0.21.1
     # via -r requirements.in
-s3fs==2023.12.2
+s3fs==2024.3.1
     # via -r optional-package.in
-s3transfer==0.10.0
+s3transfer==0.10.1
     # via boto3
-semantic-version==2.10.0
-    # via setuptools-rust
-setuptools-rust==1.8.1
-    # via -r requirements.in
-shapely==2.0.2
+shapely==2.0.4
     # via geopandas
 six==1.16.0
     # via
@@ -336,7 +332,7 @@ six==1.16.0
     #   fiona
     #   isodate
     #   python-dateutil
-sniffio==1.3.0
+sniffio==1.3.1
     # via
     #   anyio
     #   httpx
@@ -346,7 +342,7 @@ sortedcontainers==2.4.0
     #   hypothesis
 stack-data==0.6.3
     # via ipython
-starlette==0.35.1
+starlette==0.37.2
     # via fastapi
 tabulate==0.9.0
     # via dask-sql
@@ -359,42 +355,43 @@ toolz==0.12.1
     #   partd
 tornado==6.4
     # via distributed
-traitlets==5.14.1
+traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-types-awscrt==0.20.3
+types-awscrt==0.20.9
     # via botocore-stubs
 types-boto3==1.0.2
     # via -r requirements.in
 types-botocore==1.0.2
     # via -r requirements.in
-types-pytz==2023.4.0.20240130
+types-pytz==2024.1.0.20240417
     # via pandas-stubs
-types-s3transfer==0.10.0
+types-s3transfer==0.10.1
     # via boto3-stubs
-types-setuptools==69.0.0.20240125
+types-setuptools==69.5.0.20240423
     # via -r requirements.in
-typing-extensions==4.9.0
+typing-extensions==4.11.0
     # via
     #   -r requirements-package.in
     #   azure-core
     #   azure-storage-blob
     #   boto3-stubs
     #   fastapi
+    #   ipython
     #   mypy
     #   pydantic
     #   pydantic-core
-tzdata==2023.4
+tzdata==2024.1
     # via pandas
 tzlocal==5.2
     # via dask-sql
-urllib3==2.0.7
+urllib3==2.2.1
     # via
     #   botocore
     #   distributed
     #   requests
-uvicorn==0.27.0.post1
+uvicorn==0.29.0
     # via dask-sql
 wcwidth==0.2.13
     # via prompt-toolkit
@@ -404,8 +401,5 @@ yarl==1.9.4
     # via aiohttp
 zict==3.0.0
     # via distributed
-zipp==3.17.0
+zipp==3.18.1
     # via importlib-metadata
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
