--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11.8"]
+        python-version: ["3.9", "3.10", "3.11.8"]
 
     steps:
     - uses: actions/checkout@v3
@@ -52,5 +52,5 @@ jobs:
 
     - name: Run tests
       run: |
-        docker-compose up -d
+        docker compose up -d
         pytest
