--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
 
   test:
     name: Run Pytest
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: build
     strategy:
       matrix:
@@ -30,10 +30,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y gdal-bin libgdal-dev
+    #- name: Install system dependencies
+    #  run: |
+    #    sudo apt-get update
+    #    sudo apt-get install -y gdal-bin libgdal-dev
 
     - name: Install pip-tools
       run: |
