--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,17 +30,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    #- name: Install system dependencies
-    #  run: |
-    #    sudo apt-get update
-    #    sudo apt-get install -y gdal-bin libgdal-dev
-
     - name: Install pip-tools
       run: |
         python -m pip install --upgrade pip
         pip install pip-tools setuptools-rust
 
-    - name: Pip Compile
+    - name: Pip install
       run: |
         pip install -r requirements.txt
 
