--- a/requirements.txt
+++ b/requirements.txt
@@ -4,72 +4,70 @@
 #
 #    pip-compile
 #
-adlfs==2024.4.1
+adlfs==2024.12.0
     # via -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-aiobotocore==2.12.3
+aiobotocore==2.22.0
     # via s3fs
-aiohttp==3.9.5
+aiohappyeyeballs==2.6.1
+    # via aiohttp
+aiohttp==3.11.18
     # via
     #   adlfs
     #   aiobotocore
     #   s3fs
-aioitertools==0.11.0
+aioitertools==0.12.0
     # via aiobotocore
-aiosignal==1.3.1
+aiosignal==1.3.2
     # via aiohttp
-annotated-types==0.6.0
+annotated-types==0.7.0
     # via pydantic
-anyio==4.3.0
+anyio==4.9.0
     # via
     #   httpx
     #   starlette
-asttokens==2.4.1
+asttokens==3.0.0
     # via stack-data
-attrs==23.2.0
+attrs==25.3.0
     # via
     #   aiohttp
     #   fiona
     #   hypothesis
-    #   pytest-mypy
-azure-core==1.30.1
+azure-core==1.34.0
     # via
     #   adlfs
     #   azure-identity
     #   azure-storage-blob
 azure-datalake-store==0.0.53
     # via adlfs
-azure-identity==1.16.0
+azure-identity==1.23.0
     # via adlfs
-azure-storage-blob==12.19.1
+azure-storage-blob==12.25.1
     # via adlfs
-boto3==1.34.69
+boto3==1.37.3
     # via -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-boto3-stubs==1.34.94
-    # via types-boto3
-botocore==1.34.69
+botocore==1.37.3
     # via
     #   aiobotocore
     #   boto3
     #   s3transfer
-botocore-stubs==1.34.94
+botocore-stubs==1.38.16
     # via
-    #   boto3-stubs
+    #   types-boto3
     #   types-botocore
-certifi==2024.2.2
+certifi==2025.4.26
     # via
     #   fiona
     #   httpcore
     #   httpx
-    #   pyogrio
     #   pyproj
     #   requests
-cffi==1.16.0
+cffi==1.17.1
     # via
     #   azure-datalake-store
     #   cryptography
-charset-normalizer==3.3.2
+charset-normalizer==3.4.2
     # via requests
-click==8.1.7
+click==8.2.0
     # via
     #   click-plugins
     #   cligj
@@ -81,139 +79,142 @@ click-plugins==1.1.1
     # via fiona
 cligj==0.7.2
     # via fiona
-cloudpickle==3.0.0
+cloudpickle==3.1.1
     # via
     #   dask
     #   distributed
 converter==1.0.0
     # via -r requirements.in
-coverage[toml]==7.5.0
+coverage[toml]==7.8.0
     # via pytest-cov
-cramjam==2.8.3
+cramjam==2.10.0
     # via fastparquet
-cryptography==42.0.5
+cryptography==44.0.3
     # via
     #   azure-identity
     #   azure-storage-blob
     #   msal
     #   pyjwt
-dask[array,dataframe]==2024.1.1
+dask[array,dataframe]==2025.5.0
     # via
     #   -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
     #   dask-geopandas
     #   dask-sql
     #   distributed
-dask-geopandas==0.3.1
+dask-geopandas==0.4.3
     # via -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-dask-sql==2024.3.0
+dask-sql==2024.5.0
     # via -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-decorator==5.1.1
+decorator==5.2.1
     # via
     #   ipdb
     #   ipython
-distributed==2024.1.1
+distributed==2025.5.0
     # via
     #   -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-    #   dask-geopandas
     #   dask-sql
-executing==2.0.1
+executing==2.2.0
     # via stack-data
-fastapi==0.110.3
+fastapi==0.115.12
     # via dask-sql
-fastparquet==2024.2.0
+fastparquet==2024.11.0
     # via -r /home/sam/work/oasis-repos/OasisDataManager/requirements-package.in
-filelock==3.14.0
+filelock==3.18.0
     # via pytest-mypy
-fiona==1.9.6
+fiona==1.10.1
     # via geopandas
-flake8==7.0.0
+flake8==7.2.0
     # via -r requirements.in
-frozenlist==1.4.1
+frozenlist==1.6.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2024.3.1
+fsspec==2025.3.2
     # via
     #   -r /home/sam/work/oasis-repos/OasisDataManager/requirements-package.in
     #   adlfs
     #   dask
     #   fastparquet
     #   s3fs
-geodatasets==2023.12.0
+geodatasets==2024.8.0
     # via -r requirements.in
 geopandas==0.14.4
     # via
     #   -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
     #   dask-geopandas
-h11==0.14.0
+h11==0.16.0
     # via
     #   httpcore
     #   uvicorn
-h5py==3.11.0
+h5py==3.13.0
     # via -r requirements.in
-httpcore==1.0.5
+httpcore==1.0.9
     # via httpx
-httpx==0.27.0
+httpx==0.28.1
     # via
     #   -r requirements.in
     #   dask-sql
     #   respx
-hypothesis==6.100.2
+hypothesis==6.131.17
     # via -r requirements.in
-idna==3.7
+idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==7.1.0
+importlib-metadata==8.7.0
     # via dask
-iniconfig==2.0.0
+iniconfig==2.1.0
     # via pytest
 ipdb==0.13.13
     # via -r requirements.in
-ipython==8.24.0
+ipython==9.2.0
     # via ipdb
-isodate==0.6.1
-    # via azure-storage-blob
-isort==5.13.2
-    # via pytest-isort
-jedi==0.19.1
+ipython-pygments-lexers==1.1.1
     # via ipython
-jinja2==3.1.3
+isodate==0.7.2
+    # via azure-storage-blob
+isort==6.0.1
+    # via pytest-isort
+jedi==0.19.2
+    # via ipython
+jinja2==3.1.6
     # via distributed
 jmespath==1.0.1
     # via
+    #   aiobotocore
     #   boto3
     #   botocore
 locket==1.0.0
     # via
     #   distributed
     #   partd
-markupsafe==2.1.5
+markupsafe==3.0.2
     # via jinja2
 matplotlib-inline==0.1.7
     # via ipython
 mccabe==0.7.0
     # via flake8
-msal==1.28.0
+msal==1.32.3
     # via
     #   azure-datalake-store
     #   azure-identity
     #   msal-extensions
-msal-extensions==1.1.0
+msal-extensions==1.3.1
     # via azure-identity
-msgpack==1.0.8
+msgpack==1.1.0
     # via distributed
-multidict==6.0.5
+multidict==6.4.3
     # via
+    #   aiobotocore
     #   aiohttp
     #   yarl
-mypy==1.10.0
+mypy==1.15.0
     # via pytest-mypy
-mypy-extensions==1.0.0
+mypy-extensions==1.1.0
     # via mypy
-numpy==1.26.4
+numpy==2.2.5
     # via
     #   dask
     #   fastparquet
@@ -221,185 +222,191 @@ numpy==1.26.4
     #   h5py
     #   pandas
     #   pandas-stubs
-    #   pyogrio
     #   shapely
-packaging==24.0
+packaging==25.0
     # via
     #   dask
     #   dask-geopandas
     #   distributed
     #   fastparquet
     #   geopandas
-    #   msal-extensions
     #   pooch
-    #   pyogrio
     #   pytest
-pandas==2.2.2
+pandas==2.2.3
     # via
     #   -r /home/sam/work/oasis-repos/OasisDataManager/requirements-package.in
     #   dask
     #   dask-sql
     #   fastparquet
     #   geopandas
-pandas-stubs==2.2.1.240316
+pandas-stubs==2.2.3.250308
     # via -r requirements.in
 parso==0.8.4
     # via jedi
-partd==1.4.1
+partd==1.4.2
     # via dask
 pexpect==4.9.0
     # via ipython
-platformdirs==4.2.1
+platformdirs==4.3.8
     # via pooch
-pluggy==1.5.0
+pluggy==1.6.0
     # via pytest
-pooch==1.8.1
+pooch==1.8.2
     # via geodatasets
-portalocker==2.8.2
-    # via msal-extensions
-prompt-toolkit==3.0.43
+prompt-toolkit==3.0.51
     # via
     #   dask-sql
     #   ipython
-psutil==5.9.8
+propcache==0.3.1
+    # via
+    #   aiohttp
+    #   yarl
+psutil==7.0.0
     # via distributed
 ptyprocess==0.7.0
     # via pexpect
-pure-eval==0.2.2
+pure-eval==0.2.3
     # via stack-data
-pycodestyle==2.11.1
+pyarrow==20.0.0
+    # via dask
+pycodestyle==2.13.0
     # via flake8
 pycparser==2.22
     # via cffi
-pydantic==2.7.1
+pydantic==2.11.4
     # via fastapi
-pydantic-core==2.18.2
+pydantic-core==2.33.2
     # via pydantic
-pyflakes==3.2.0
+pyflakes==3.3.2
     # via flake8
-pygments==2.17.2
+pygments==2.19.1
     # via
     #   dask-sql
     #   ipython
-pyjwt[crypto]==2.8.0
+    #   ipython-pygments-lexers
+pyjwt[crypto]==2.10.1
     # via
     #   msal
     #   pyjwt
-pyogrio==0.7.2
-    # via -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-pyproj==3.6.1
+pyproj==3.7.1
     # via geopandas
-pytest==8.2.0
+pytest==8.3.5
     # via
     #   -r requirements.in
     #   pytest-cov
     #   pytest-isort
     #   pytest-mypy
-pytest-cov==5.0.0
+pytest-cov==6.1.1
     # via -r requirements.in
 pytest-isort==4.0.0
     # via -r requirements.in
-pytest-mypy==0.10.3
+pytest-mypy==1.0.1
     # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via
+    #   aiobotocore
     #   botocore
     #   pandas
-pytz==2024.1
+pytz==2025.2
     # via pandas
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via
     #   dask
     #   distributed
-requests==2.31.0
+requests==2.32.3
     # via
     #   azure-core
     #   azure-datalake-store
     #   msal
     #   pooch
-respx==0.21.1
+respx==0.22.0
     # via -r requirements.in
-s3fs==2024.3.1
+s3fs==2025.3.2
     # via -r /home/sam/work/oasis-repos/OasisDataManager/optional-package.in
-s3transfer==0.10.1
+s3transfer==0.11.3
     # via boto3
-shapely==2.0.4
-    # via geopandas
-six==1.16.0
+shapely==2.1.0
     # via
-    #   asttokens
+    #   dask-geopandas
+    #   geopandas
+six==1.17.0
+    # via
     #   azure-core
-    #   fiona
-    #   isodate
     #   python-dateutil
 sniffio==1.3.1
-    # via
-    #   anyio
-    #   httpx
+    # via anyio
 sortedcontainers==2.4.0
     # via
     #   distributed
     #   hypothesis
 stack-data==0.6.3
     # via ipython
-starlette==0.37.2
+starlette==0.46.2
     # via fastapi
 tabulate==0.9.0
     # via dask-sql
-tblib==3.0.0
+tblib==3.1.0
     # via distributed
-toolz==0.12.1
+toolz==1.0.0
     # via
     #   dask
     #   distributed
     #   partd
-tornado==6.4
+tornado==6.4.2
     # via distributed
 traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-types-awscrt==0.20.9
+types-awscrt==0.27.1
     # via botocore-stubs
-types-boto3==1.0.2
+types-boto3==1.38.16
     # via -r requirements.in
 types-botocore==1.0.2
     # via -r requirements.in
-types-pytz==2024.1.0.20240417
+types-pytz==2025.2.0.20250326
     # via pandas-stubs
-types-s3transfer==0.10.1
-    # via boto3-stubs
-types-setuptools==69.5.0.20240423
+types-s3transfer==0.12.0
+    # via types-boto3
+types-setuptools==80.4.0.20250511
     # via -r requirements.in
-typing-extensions==4.11.0
+typing-extensions==4.13.2
     # via
     #   -r /home/sam/work/oasis-repos/OasisDataManager/requirements-package.in
+    #   anyio
     #   azure-core
+    #   azure-identity
     #   azure-storage-blob
-    #   boto3-stubs
     #   fastapi
     #   ipython
     #   mypy
     #   pydantic
     #   pydantic-core
-tzdata==2024.1
+    #   types-boto3
+    #   typing-inspection
+typing-inspection==0.4.0
+    # via pydantic
+tzdata==2025.2
     # via pandas
-tzlocal==5.2
+tzlocal==5.3.1
     # via dask-sql
-urllib3==2.2.1
+urllib3==2.4.0
     # via
     #   botocore
     #   distributed
     #   requests
-uvicorn==0.29.0
+uvicorn==0.34.2
     # via dask-sql
 wcwidth==0.2.13
     # via prompt-toolkit
-wrapt==1.16.0
+wrapt==1.17.2
     # via aiobotocore
-yarl==1.9.4
+yarl==1.20.0
     # via aiohttp
 zict==3.0.0
     # via distributed
-zipp==3.18.1
+zipp==3.21.0
     # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
