--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,11 @@
 universal = 1
 
 [metadata]
+name = oasis-data-manager
+version = attr: oasis_data_manager.__version__
 description-file = README.md
+license = BSD-3-Clause
+license_files = LICENSE
 
 [tool:pytest]
 exclude = .tox,.git,docs,.ropeproject
