--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         for i in {1..30}; do
           if curl -s http://localhost:4566/_localstack/health | grep -q '"s3": "running"'; then
             echo "LocalStack is ready"
-            curl -s http://localhost:4566/_localstack/health
+            curl -s http://localhost:4566/_localstack/health || true
             exit 0
           fi
           echo "Waiting for LocalStack..."
