--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,12 +55,11 @@ jobs:
     - name: Wait for LocalStack to be ready
       run: |
         for i in {1..30}; do
-          if curl -s http://localhost:4566/_localstack/health | grep -q '"s3": "running"'; then
+          if curl -s http://localhost:4566/_localstack/health | grep -q '"s3": "available"'; then
             echo "LocalStack is ready"
             exit 0
           fi
           echo "Waiting for LocalStack..."
-          curl -s http://localhost:4566/_localstack/health || true
           sleep 2
         done
         echo "LocalStack did not become ready in time"
